[수정] 유효 근무 정책 조회 로직 개선 및 API 연동 강화 #84
원인:
- 기존 `AttendanceService`의 근무 기록(출퇴근, 외출 등) 로직이 직원의 소속 조직(organizationId)을 고려하지 않고, 회사(companyId) 단위로만 유효 정책을
조회했습니다. 이로 인해 부서별로 다른 정책을 적용하는 것이 불가능했습니다.
- API 엔드포인트에서 사용자 식별 정보를 헤더와 파라미터로 혼용하여 일관성이 부족했습니다.
- 테스트 데이터 생성 로직이 불필요한 디바이스 등록 코드를 포함하고, 정책 할당 방식이 실제 로직과 달라 테스트의 정확성이 떨어졌습니다.

수정사항:
- AttendanceService: 출퇴근, 외출, 복귀 등 모든 근무 기록 이벤트 처리 시 `organizationId`를 추가로 받아 `policyAssignmentService.findEffectivePolicyForMember`를
호출하도록 수정하여, 개인의 소속 조직까지 고려한 정확한 유효 정책을 적용하도록 개선했습니다.
- PolicyService: `findMyEffectivePolicy` 메서드를 추가하여 현재 사용자의 유효 정책을 직접 조회할 수 있는 기능을 제공하고, `PolicyController`에
`/my-effective-policy` 엔드포인트를 추가했습니다.
- PolicyController: 기존에 `@RequestParam`으로 받던 `companyId`를 `@RequestHeader`에서 가져오도록 변경하여 API의 일관성을 확보했습니다.
- AttendanceTestDataInitializer: 불필요한 테스트 디바이스 생성 로직을 제거하고, 기본 근무 정책과 연차 정책을 생성하여 `policyRepository`에 직접 저장하도록 테스트
데이터 초기화 로직을 단순화하고 개선했습니다.

영향 범위:
- 모든 근무 기록(출퇴근, 외출, 휴게) 생성 로직
- 직원의 유효 근무 정책 조회 및 적용 정확성
- 정책 조회 관련 API 엔드포인트
- 테스트 데이터 생성 및 초기화 방식